--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,10 +6,11 @@
     "id": "bVldMVJIV71m"
    },
    "source": [
-    "# Data Visualization using Python (with Spotify data)\n",
-    "Data is ever-present in our lives, but is sometimes difficult to interpret in its original form. Visualization is therefore a crucial tool in many fields for understanding and drawing conclusions from data.\n",
+    "# Visualizing Spotify data with Python\n",
     "\n",
-    "This workbook aims to show some basic techniques for generating plots of data in Python, as well as providing resources for more advanced methods in data visualization."
+    "We will use Matplotlib and Numpy to inspect and learn something about a collection of top hits from Spotify!\n",
+    "\n",
+    "Before starting this notebook, you should have already gone through the [introduction to Matplotlib](https://github.com/DPHHSCodingClub/DataVisualization), or you should be already familiar with Matplotlib's main functions in Pyplot, such as `plt.plot` and `plt.scatter`."
    ]
   },
   {
@@ -18,15 +19,14 @@
     "id": "oeqQnrO0cOU9"
    },
    "source": [
-    "# 1. Code libraries\n",
+    "# Code libraries\n",
     "First, let's import the two libraries `matplotlib.pyplot` and `numpy` by typing \n",
     "\n",
     "```\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "print(\"done!\")\n",
     "```\n",
-    "in the code box below. Then press <kbd>Shift</kbd>+<kbd>Enter</kbd>, or the `▶️ Run` button in the top bar, to execute the code.  When you see \"Done!\" appear below the cell, we are ready to continue."
+    "in the code box below. Then press <kbd>Shift</kbd>+<kbd>Enter</kbd>, or the ▶️ button in the top bar, to execute the code.  When a number appears in the square brackets left of the cell, like `In [1]:`, we are ready to continue."
    ]
   },
   {
@@ -38,280 +38,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oJ8CkKtuc09A"
-   },
-   "source": [
-    "Now we have access to all of the functions contained in ```matplotlib.pyplot``` and `numpy`. When we want to use them, we simply need to type ```plt.``` or `np.` in front of the function name. For example, if we want to plot some data, we might type\n",
-    "\n",
-    "```\n",
-    "plt.plot(data)\n",
-    "```\n",
-    "Let's come back to this later once we have data to visualize!\n",
-    "\n",
-    "You can also find documentation for ```matplotlib.pyplot``` [here](https://matplotlib.org/3.5.0/api/_as_gen/matplotlib.pyplot.html). Take a second to check it out!\n",
-    "\n",
-    "# 2. Making scatter plots\n",
-    "\n",
-    "## Generating some data\n",
-    "\n",
-    "Now, let's generate some data for a 'scatter plot'! This is done by generating two lists, $x = [x_1, x_2, ...]$ and $y = [y_1, y_2, ...]$ so that we can plot the coordinate pairs $(x_1, y_1)$ and so on. In the code box below, define two lists and fill them with the following numbers:\n",
-    "\n",
-    "x: 1.1, 3.2, 4.4, 5.2, 6.3  \n",
-    "y: 0.5, 3.5, 4.5, 4.8, 6.2\n",
-    "\n",
-    "The first list is done for you already."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:02.03254Z",
-     "iopub.status.busy": "2022-05-23T19:15:02.03206Z",
-     "iopub.status.idle": "2022-05-23T19:15:02.037267Z",
-     "shell.execute_reply": "2022-05-23T19:15:02.036429Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:02.032494Z"
-    },
-    "id": "DREEl6A9erXO",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#define your lists here\n",
-    "x = [1.1, 3.2, 4.4, 5.2, 6.3]\n",
-    "\n",
-    "# write your own code to create a variable called y, holding a list of 5 numbers.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "X0Mca-n5gwMu"
-   },
-   "source": [
-    "Now we are ready to plot our data! Since we are dealing with sets of coordinates, a scatter plot is a good choice for visualizing this data. For this, we will use the ```scatter()``` function from ```matplotlib.pyplot```.  \n",
-    "\n",
-    "The ```scatter()``` function takes two inputs, which are your x and y coordinate lists. You can also add other inputs to customize your plot by changing the color, size, and shape of the scatter plot points.  \n",
-    "\n",
-    "The final piece of the puzzle is actually making your plot appear. This is done using the ```show()``` function, which takes no inputs.  \n",
-    "\n",
-    "In the code box below, make a scatter plot of your data by typing \n",
-    "\n",
-    "```\n",
-    "plt.scatter(x, y)\n",
-    "plt.show()\n",
-    "```\n",
-    "A few things to note:\n",
-    "\n",
-    "*   We put ```plt.``` before the function to tell the code it must get the function from the ```matplotlib.pyplot``` library\n",
-    "*   You must call the ```show()``` function after you generate the plot, since the code runs line by line. If you put the ```show()``` function before the ```scatter()``` function, it won't show anything because the plot hasn't been made yet!\n",
-    "*   If you want to know about the other options for the scatter function, the ```matplotlib.pyplot``` online documentation is very thorough. You can find it here: [https://matplotlib.org/3.5.0/api/_as_gen/matplotlib.pyplot.scatter.html](https://matplotlib.org/3.5.0/api/_as_gen/matplotlib.pyplot.scatter.html)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:02.039238Z",
-     "iopub.status.busy": "2022-05-23T19:15:02.038799Z",
-     "iopub.status.idle": "2022-05-23T19:15:02.276276Z",
-     "shell.execute_reply": "2022-05-23T19:15:02.27542Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:02.039196Z"
-    },
-    "id": "GIUuusD4iDWt",
-    "outputId": "7734c631-9534-4dc3-b78c-9208f18c1a5e",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#generate your scatter plot and show it in this box\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "H0sW_KFiigjR"
-   },
-   "source": [
-    "And just like that, we have made our first Python plot! Let's do a simple customization. Python has several color options for scatter plots. You can tell python which color you want using the 'color' parameter, and setting it equal to a string indicating the color you have chosen. Below is a list of all the 'named' colors available in matplotlib.pyplot:\n",
-    "\n",
-    "![Named colors in matplotlib](media/named_colors.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "0jv_nCNnmw8a"
-   },
-   "source": [
-    "Select your favorite color and remake your plot, now including a color option in the ```scatter()``` function. For example:\n",
-    "\n",
-    "```\n",
-    "plt.scatter(x, y, color = 'magenta')\n",
-    "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:02.279107Z",
-     "iopub.status.busy": "2022-05-23T19:15:02.278337Z",
-     "iopub.status.idle": "2022-05-23T19:15:02.455189Z",
-     "shell.execute_reply": "2022-05-23T19:15:02.454366Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:02.27906Z"
-    },
-    "id": "aZ_hlxDInRGZ",
-    "outputId": "1e89fa2d-5524-48e6-d139-c66f7dd7e400",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#make your plot with a custom point color in this code box\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5mt4c8ponj_s"
-   },
-   "source": [
-    "Finally, every good plot needs to have annotations. This means a title, axis labels, and perhaps a legend. This can all be achieved using matplotlib.pyplot functions, detailed below:\n",
-    "\n",
-    "```\n",
-    "plt.scatter(x, y, color = 'magenta', label = 'My data')\n",
-    "plt.title('My title')\n",
-    "plt.xlabel('x value')\n",
-    "plt.ylabel('y data')\n",
-    "plt.legend(loc = 'upper left')\n",
-    "plt.show()\n",
-    "```\n",
-    "Remember to put ```plt.show()``` last, because any additional changes you make to your plot after the ```show()``` line will not show up!  \n",
-    "\n",
-    "Note:\n",
-    "1.   ```title()```, ```xlabel()```, and ```ylabel()``` all take strings as their inputs\n",
-    "2.   Calling the ```legend()``` function with no inputs will have the program automatically select the best location for the legend. However, you can also specify the location by setting ```loc``` equal to a string such as ```'upper left'```, ```'lower right'```, and so on.\n",
-    "3.   The ```legend()``` function requires you to specify a label in the ```scatter()``` function. This is what will show up in the legend.\n",
-    "\n",
-    "Plot your data once more in the box below, this time with a title, axis labels, and a legend. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:02.456547Z",
-     "iopub.status.busy": "2022-05-23T19:15:02.456299Z",
-     "iopub.status.idle": "2022-05-23T19:15:02.763183Z",
-     "shell.execute_reply": "2022-05-23T19:15:02.762324Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:02.456519Z"
-    },
-    "id": "L32Gxq9loTM3",
-    "outputId": "f118024a-3b58-49ba-8b22-90cd87964a9b",
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#plot your data again in this text box\n",
-    "plt.scatter(x, y, color = 'magenta', label = 'My data')\n",
-    "plt.title('My title')\n",
-    "plt.xlabel('x value')\n",
-    "plt.ylabel('y value')\n",
-    "plt.legend(loc = 'upper left')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Making line plots with MTA Data\n",
-    "\n",
-    "#### Let's look at a real life dataset and visualize it in a useful way. Below, we have some data taken from the MTA website: yearly average subway ridership from 2015 - 2020. Run the code box below to initialize the data lists."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:03.042923Z",
-     "iopub.status.busy": "2022-05-23T19:15:03.042368Z",
-     "iopub.status.idle": "2022-05-23T19:15:03.051911Z",
-     "shell.execute_reply": "2022-05-23T19:15:03.051291Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:03.042883Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Here is the MTA data we will be visualizing \n",
-    "year = [2015, 2016, 2017, 2018, 2019, 2020]\n",
-    "\n",
-    "# Subway ridership in millions\n",
-    "avg_weekday = [5.650610, 5.655755, 5.580845, 5.437586, 5.493875, 2.040580]\n",
-    "avg_weekend = [5.943149, 5.758201, 5.682154, 5.438947, 5.494195, 2.135312]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can make our plot. Plot the average weekday and weekend data on the same graph, with the year as the horizontal axis for your plot. Be sure to add a legend so you can tell which dataset is which! For this, you can use the ```plot()``` function from ```matplotlib.pyplot```. Also, add axis labels and a title so that your plot can be understood easily.\n",
-    "\n",
-    "Similar to ```scatter()``` before, the ```plot()``` function has two arguments: first the x-coordinate values, then the y-coordinate values."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:03.053282Z",
-     "iopub.status.busy": "2022-05-23T19:15:03.052933Z",
-     "iopub.status.idle": "2022-05-23T19:15:03.063912Z",
-     "shell.execute_reply": "2022-05-23T19:15:03.063263Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:03.053238Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Plot the weekly average data here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-23T19:15:03.113071Z",
-     "iopub.status.busy": "2022-05-23T19:15:03.112721Z",
-     "iopub.status.idle": "2022-05-23T19:15:03.121872Z",
-     "shell.execute_reply": "2022-05-23T19:15:03.121254Z",
-     "shell.execute_reply.started": "2022-05-23T19:15:03.113025Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Plot average rides per person by year in this box "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Visualizing Spotify top hits with scatter plots and histograms\n",
-    "\n",
-    "Let's turn to one more example of data we can play with - Spotify's analysis of top hits.\n",
+    "# Visualizing Spotify top hits with scatter plots and histograms\n",
     "\n",
     "In the left sidebar, double click the `dat` folder.  You should see a bunch of files ending with `.json`, which contain our raw data (you might need to expand the sidebar to see the full names).\n",
     "\n",
