--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "p = coding_club.load(\"top_hits_2021.json\")"
+    "p = coding_club.load(\"dat/top_hits_2021.json\")"
    ]
   },
   {
@@ -274,7 +274,7 @@
    },
    "outputs": [],
    "source": [
-    "p = coding_club.load(\"top_hits_2020.json\")\n",
+    "p = coding_club.load(\"dat/top_hits_2020.json\")\n",
     "song_names = p.get('name')\n",
     "danceability = p.get('danceability')"
    ]
@@ -412,7 +412,7 @@
     "for year in years:\n",
     "    \n",
     "    # load the playlist information from a given year\n",
-    "    filename = \"top_hits_\" + str(year) + \".json\"\n",
+    "    filename = \"dat/top_hits_\" + str(year) + \".json\"\n",
     "    p = coding_club.load(filename)\n",
     "    \n",
     "    # get the danceability of all songs on that playlist,\n",
@@ -484,8 +484,8 @@
    },
    "outputs": [],
    "source": [
-    "p_old = coding_club.load(\"top_hits_1970.json\")\n",
-    "p_new = coding_club.load(\"top_hits_2020.json\")"
+    "p_old = coding_club.load(\"dat/top_hits_1970.json\")\n",
+    "p_new = coding_club.load(\"dat/top_hits_2020.json\")"
    ]
   },
   {
